# abridge

./: Cargo.toml  README.md  test.sh
src/: cli.yml  lib.rs  main.rs
tests/: small.txt
