[package]
name = "abridge"
author = "Conner D"
description = "A word list compression library, which is just a port of GNU word-list-compress to Rust."
version = "1.0.1"
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
clap = {version = "^2.33.3", features = ["yaml"]}
substring = "^1.4.0"

[lib]

[[bin]]
name = "abridge"
