[package]
name = "abridge"
description = "Compress a sorted word list or decompress a file compressed by abridge or word-list-compress."
version = "1.1.5"
license = "GPL-3.0-or-later"
edition = "2018"
documentation = "https://docs.rs/abridge"
readme = "README.md"
homepage = "https://github.com/passthroo/abridge"
repository = "https://github.com/passthroo/abridge"

[dependencies]
clap = {version = "^2.33.3", features = ["yaml"]}
substring = "^1.4.0"

[lib]

[[bin]]
name = "abridge"
