[package]
name = "abridge"
version = "1.1.6"
authors = ["Conner D"]
edition = "2018"
description = "Compress a sorted word list or decompress a file compressed by abridge or word-list-compress."
documentation = "https://docs.rs/abridge"
readme = "README.md"
homepage = "https://github.com/passthroo/abridge"
repository = "https://github.com/passthroo/abridge"
license = "GPL-3.0-or-later"
keywords = ["cli", "compress", "dictionary", "list", "word"]
categories = ["command-line-utilities", "compression"]
exclude = ["tests/"]

[dependencies]
clap = {version = "^2.33.3", features = ["yaml"]}
substring = "^1.4.0"

